@@ -1,5 +1,8 @@
 #Nmap Changelog ($Id$); -*-text-*-
 
+o [Ncat][GH#2202] Use safety-checked versions of FD_* macros to abort early if
+  number of connections exceeds FD_SETSIZE. [Pavel Zhukov]
+
 o Nmap will now output a list of port numbers for each "ignored" state in the
   "extrareasons" element in XML output. The "All X ports" and "Not shown:" lines
   in normal output have been changed slightly to provide more detail. [Daniel Miller]
